--- a/issue-tracking/src/app/issue-report/issue-report.component.html
+++ b/issue-tracking/src/app/issue-report/issue-report.component.html
@@ -1,5 +1,5 @@
 <h3>Report an issue</h3>
-<form clrForm *ngIf="issueForm" [formGroup]="issueForm">
+<form clrForm *ngIf="issueForm" [formGroup]="issueForm" (ngSubmit)="addIssue()">
     <clr-input-container>
         <label>Title</label>
         <input clrInput formControlName="title" />
@@ -27,5 +27,6 @@
             <option value="Documentation">Documentation</option>
         </select>
     </clr-select-container>
-    <button class="btn btn-primary" type="submit" (ngSubmit)="addIssue()">Create</button>
+    <button class="btn btn-primary" type="submit">Create</button>
+    <button class="btn" type="button" (click)="formClose.emit()">Cancel</button>
 </form>
